G/tests/fail/dup_field.g
// Trường struct trùng tên.
struct P { x: int, x: int }
fn main() -> int { return 0 }
